<resources>
    <string name="app_name">Список покупок</string>
    <string name="toolbar_title">Списоки покупок</string>
    <string name="create_list">Создание списка</string>
    <string name="list_name">Название списка</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="add_product">Добавить продукт</string>
    <string name="add">Добавить</string>
    <string name="share">Отправить</string>
    <string name="edit">Изменить</string>
    <string name="confirm_remove">Вы дейстивительно хотите удалить этот пункт из списка?</string>
    <string name="name">Название</string>
    <string name="price">Цена</string>
    <string name="save">Сохранить</string>
    <string name="count">Количество</string>
    <string name="total">Итого:</string>
    <string name="balance">Остаток:</string>
    <string name="create_new_list">Создать новый список</string>
</resources>
